--- a/php/src/languages/en.po
+++ b/php/src/languages/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: thePanel2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-11-16 17:38+0100\n"
+"POT-Creation-Date: 2009-11-16 17:45+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Yegor Bugayenko <egor@technoparkcorp.com>\n"
 "Language-Team: tpc <team@tpc2.com>\n"
@@ -15,6 +15,25 @@ msgstr ""
 "X-Poedit-Basepath: /code/panel2/php/src/application\n"
 "X-Poedit-KeywordsList: _\n"
 "X-Poedit-SearchPath-0: /code/panel2/php/src/application\n"
+
+#: /code/panel2/php/src/application/controllers/PanelController.php:86
+#, php-format
+msgid "Sorry, the document \"%s\" is not available for you"
+msgstr "Sorry, the document \"%s\" is not available for you"
+
+#: /code/panel2/php/src/application/controllers/PanelController.php:92
+#, php-format
+msgid "Sorry, the document \"%s\" is not found"
+msgstr "Sorry, the document \"%s\" is not found"
+
+#: /code/panel2/php/src/application/controllers/PanelController.php:151
+msgid "The link you are using is not valid any more"
+msgstr "The link you are using is not valid any more"
+
+#: /code/panel2/php/src/application/controllers/PanelController.php:156
+#, php-format
+msgid "Sorry, this document \"%s\" is not shared with you, but only with %s"
+msgstr "Sorry, this document \"%s\" is not shared with you, but only with %s"
 
 #: /code/panel2/php/src/application/pages/projects.phtml:1
 msgid "Full list of projects:"
