--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \section*{Latest Won and Lost Accounts}
 
 There are five project managers in \href{${url:about/teams}}{our team}. Each of them
