--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/QualityPolicy.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/QualityPolicy.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \section*{Quality Policy Basics}
 
 TechnoPark Corp. is a proud \href{${url:about/news/year2008/iso9001}}{ISO-9001 certified company} and we
