--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Structure.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Structure.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \section*{Company Structure of TechnoPark Corp.}
 
 There is \href{http://en.wikipedia.org/wiki/Matrix_management}{a strong matrix} organizational structure in TechnoPark Corp.,
