--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/CompanyInfo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/CompanyInfo.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 TechnoPark Corp. is incorporated in Florida, USA on 20-Feb-06 for
 conducting software development business and innovating the industry
 of software development. We collected all valuable official information
