--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/ProjectModel.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/ProjectModel.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 Our full-scale project management with easy-to-use automated
 instant metrics is the key innovative solution that differs us
 from other companies. Iterative and incremental delivery of software,
