--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/Structure.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/Structure.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 We utilize a strong matrix organizational structure, with a focus
 on project management. A project is a central element in our company.
 All other departments (Finance, Sales, PMO, SEPG, QA, Security, etc.)
