--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/TechnicalCapacity.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/TechnicalCapacity.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 The projects we perform utilize resources, such as people, software,
 equipment, knowledge, cash, and others. We're capable to supply
 all that resources to your project.
