--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \thispagestyle{empty}
 \begin{textblock}{2}[1,1](15,2)\raggedleft\theTPCLogo{0.04}\end{textblock}
 \begin{textblock}{8}[1,1](15,15)%
@@ -15,16 +20,17 @@
 
 \vspace*{5cm}
 \begin{flushright}\LARGE\setstretch{1.3}
-    <?=$this->tex($this->sheets["Contacts"]->title)?>
+    <?=$this->tex($this->sheets['Contacts']->title)?>
 \end{flushright}\clearpage
 
 \clearpage
 \section*{Cover Letter}
 
-Dear Sir/Madam,
+Dear <?=$this->tex($this->sheets['Contacts']->name)?>,
 
 In reply to your request we are sending you the documents (in PDF
-format), which include the answers to the questions asked in your RFP.
+format), which include the answers to the questions asked in your RFP,
+and our commercial offer.
 
 We will wait for your feedback. 
 Thanks for considering us as a software development
@@ -52,8 +58,9 @@ tel. +1 (239) 935 5429
 \section{Proposal}
 
 <? foreach ($this->sheets as $sheet): ?> 
-    <? if (!$sheet->getTemplateFile()) continue; ?>
-    <?=$sheet->getProposal()?>
+    <? if (!$sheet->getProposalFile()) continue; ?>
+    <? $this->assign('sheet', $sheet) ?>
+    <?=$this->render($sheet->getProposalFile())?>
     Read more about it in Appendix~\ref{sheet:<?=$sheet->getSheetName()?>}
     (page~\pageref{sheet:<?=$sheet->getSheetName()?>})
 <? endforeach; ?>
