--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/TechnicalCapacity.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/TechnicalCapacity.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \section*{Technical Capacity}
 
 To perform a project we utilize several types of resources: project manager,
