--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/Vision.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/Vision.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 We analyzed the documentation we have about your project and 
 created a new scope-definition document called Vision. This document
 is a preliminary scope specification. Its purpose is to become
