--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 Rough-Order-of-Magnitude (ROM) Estimate was made by 
 <?=$this->itemize($this->sheet->estimators, 'inline')?>
 estimators using our own patent-pending estimating method (based on COCOMO-II, 
