fixes in opportunity management - now it should work

--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM.tex
@@ -3,19 +3,17 @@
 %% @version $Id$
 %%
 
-${def:$this->GetSheetHeader()}
-
 \section*{Rough-Order-of-Magnitude (ROM) Estimate}
 
 The spreadsheet contains raw numbers obtained from estimators, the calculation is as follows:
 
-${def:$this->GetTeXEstimatesSpreadsheet ()}
+% tbd
 
 We use a number of industry-wide estimating methods, and solicit numbers from different
 estimators. Each method produces its own estimates. The arithmetic average of those estimates 
 is the final result.
 
-${def:$this->GetTeXExplanations ()}
+% tbd
 
-Read more information about \href{${url:process/cost/rom}}{ROM Estimate} 
-and our \href{${url:process/cost}}{two-step quotation process}.
+Read more information about <?=$this->href('process/cost/rom', 'ROM Estimate')?> 
+and our <?=$this->href('process/cost', 'two-step quotation process')?>.
