--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
@@ -31,7 +31,7 @@ Name &amp; 		Citizenship &amp; 	BoD Position &amp; 	Shares \\
 \href{mailto:noah@technoparkcorp.com}{Noah Lieske} &amp;	United States &amp; 	Vice President &amp; 	50\% \\
 \end{tabular}
 
-Yegor Bugayenko, ${def:date ('Y') - 1976} y.o, is a certified 
+Yegor Bugayenko, 33 y.o, is a certified 
 Project Management Professional (\href{http://en.wikipedia.org/wiki/Project_Management_Professional}{PMP}), 
 IBM \href{http://www-03.ibm.com/certify/certs/38008003.shtml}{RUP} Certified Solution Designer, 
 \href{http://www.prince2.com/}{PRINCE2} Certified,
@@ -41,7 +41,8 @@ Zend Certified PHP Engineer (\href{http://www.zend.com/en/services/certification
 Yegor is responsible for technical aspects of the business, software engineering process
 and quality.
 
-Noah Lieske, ${def:date ('Y') - 1972} y.o. is a serial enterpreneur doing business since 1997 in 
+Noah Lieske, 37 y.o.
+is a serial enterpreneur doing business since 1997 in 
 e-commerce, co-founder of Intercosmos Media Group (dba \href{http://www.directnic.com}{directNIC.com}) and 
 Xasax Corp. (dba \href{http://www.xasax.com}{xasax.com}). Noah is responsible
 for business development, marketing and US sales.
