--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/Offer.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/Offer.tex
@@ -7,5 +7,9 @@ Project size is calculated in flat staff-hours, where one staff-hour
 will cost you \textbf{<?=$this->tex($this->sheet->pricePerHour)?>}. This includes
 all direct and indirect expenses, like payments to technicians and project 
 manager, equipment rental, communications, management reserve, warranty,
-and our profit. To start a project we will kindly ask you for a deposit
+and our profit. Fixed project budget will be calculated and announced
+right after the specification is developed, and we guarantee that it
+will be somewhere between <?=$this->tex($this->sheet->lowAmount)?>
+and <?=$this->tex($this->sheet->highAmount)?>.
+To start a project we will kindly ask you for a deposit
 of <?=$this->tex($this->sheet->depositAmount)?>.
