--- a/php/src/application/tikz/image.tex
+++ b/php/src/application/tikz/image.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \documentclass[11pt]{article}
 \pagestyle{empty}
 \setlength{\textheight}{297mm}
