--- a/php/src/application/tikz/pdf-top-header.tex
+++ b/php/src/application/tikz/pdf-top-header.tex
@@ -1,6 +1,7 @@
-\usepackage{lastpage,titlesec}
-\usepackage[para]{footmisc}
-\usepackage[hyperfootnotes=true]{hyperref}
+\usepackage{lastpage} % to enable \lastpage command, for footer
+\usepackage{titlesec}
+\usepackage[para]{footmisc} 
+\usepackage[hyperfootnotes=true]{hyperref} % to enable \href{} command for hyper links
 \pagestyle{empty}
 \linespread{1.2}
 \DeclareMathSizes{11}{14}{10}{9} 
