comments and props

--- a/php/src/application/tikz/pdf-document-class-landscape.tex
+++ b/php/src/application/tikz/pdf-document-class-landscape.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \documentclass[11pt,letterpaper,oneside,landscape]{article}
 \usepackage{fancyhdr}
 \usepackage[absolute]{textpos}
