--- a/php/src/application/tikz/pdf-header.tex
+++ b/php/src/application/tikz/pdf-header.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \newcommand{\theTPCLogo}[1]{\begin{tikzpicture}[scale=#1]
 	\path [fill=tpcBlue] (30.019,-26.675) circle (4.753);
 	\path [fill=tpcBlack] (51.953,-15.721) circle (4.753);
