--- a/php/src/application/tikz/pdf-logo.tex
+++ b/php/src/application/tikz/pdf-logo.tex
@@ -1,1 +1,6 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \lhead{\begin{textblock}{0}[0,1](2,2)\theTPCLogo{0.022}\end{textblock}}
