--- a/php/src/application/tikz/pdf-top-header.tex
+++ b/php/src/application/tikz/pdf-top-header.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \usepackage{lastpage} % to enable \lastpage command, for footer
 \usepackage{titlesec}
 \usepackage[para]{footmisc} 
