--- a/php/src/application/tikz/common-header.tex
+++ b/php/src/application/tikz/common-header.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \usepackage{array,multirow,setspace,colortbl,tabularx,booktabs,paralist,amsmath,xtab,chngpage}
 \usepackage{tocloft}
 \usepackage{tikz}
