--- a/php/src/application/tikz/pdf-signature.tex
+++ b/php/src/application/tikz/pdf-signature.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \lfoot{\begin{textblock}{14}[0,1](1,15)
 	\color{tpcGrey}\fontfamily{phv}\selectfont \scriptsize %
 	\parbox{\linewidth}{%
