--- a/php/src/application/tikz/styles.tex
+++ b/php/src/application/tikz/styles.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \begin{document}
 \fontfamily{phv}\selectfont
 \fontsize{10pt}{13.6pt}\selectfont
