--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
@@ -9,7 +9,7 @@
 	\raggedleft
 	TechnoPark Corp. \\
 	568 Ninth South Street, 202, Naples, Florida, 34102 \\
-	tel. (239) 243 0206, 
+	tel. (239) 935 55429, 
 	\href{mailto:sales@technoparkcorp.com}{sales@technoparkcorp.com}
 \end{textblock}
 \begin{textblock}{12}[1,1](16,16)%
@@ -19,9 +19,18 @@
 	\end{textblock}
 
 \vspace*{5cm}
-\begin{flushright}\LARGE\setstretch{1.3}
-    <?=$this->tex($this->sheets['Contacts']->title)?>
-\end{flushright}\clearpage
+\begin{flushright}
+    {\LARGE\setstretch{1.3}
+    <?=$this->tex($this->sheets['Contacts']->title)?>}
+    
+    {\setstretch{1.1}
+    <? foreach (array_keys($this->sheets['Contacts']->defaults) as $name): ?>
+        <? if ($this->sheets['Contacts']->exists($name)): ?>
+            <?=$this->tex($this->sheets['Contacts']->$name)?>\\
+        <? endif; ?>
+    <? endforeach; ?>}
+\end{flushright}
+\clearpage
 
 \clearpage
 \section*{Cover Letter}
