--- a/php/src/application/tikz/pdf-top-header.tex
+++ b/php/src/application/tikz/pdf-top-header.tex
@@ -4,8 +4,8 @@
 %%
 
 \usepackage{lastpage} % to enable \lastpage command, for footer
-\usepackage{titlesec}
-\usepackage[para]{footmisc} 
+\usepackage{titlesec} % to change formatting of \section{}
+\usepackage[para]{footmisc} % to change formatting of \footnote{}
 \usepackage[hyperfootnotes=true]{hyperref} % to enable \href{} command for hyper links
 \pagestyle{empty}
 \linespread{1.2}
