--- a/php/src/application/tikz/pdf-signature.tex
+++ b/php/src/application/tikz/pdf-signature.tex
@@ -4,7 +4,7 @@
 %%
 
 \lfoot{\begin{textblock}{14}[0,1](1,15)
-	\color{tpcGrey}\fontfamily{phv}\selectfont \scriptsize %
+	{\color{tpcGrey}\fontfamily{phv}\selectfont\scriptsize %
 	\parbox{\linewidth}{%
 	Page \#\thepage{} of \pageref{LastPage}, rev. of \today, 
 	authors: \tpcAuthors, \href{http://www.technoparkcorp.com}{www.technoparkcorp.com} \\
@@ -16,4 +16,4 @@
 	exercises in protecting its own confidential or proprietary information. The Recipient shall not use 
 	such Information for any purpose other than for information without the prior written consent 
 	of the TechnoPark Corp. The document is only valid on the day it was printed.\linebreak
-	}\end{textblock}}	
+	}}\end{textblock}}	
