--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
@@ -3,12 +3,15 @@
 %% @version $Id$
 %%
 
-Rough-Order-of-Magnitude (ROM) Estimate was made by 
-<?=$this->itemize($this->sheet->estimators, 'inline')?>
-estimators using our own patent-pending estimating method (based on COCOMO-II, 
-three-point estimate and function point analysis). According to the estimate
+Rough-Order-of-Magnitude (ROM) Estimate was made by our technical and 
+management specialists: 
+<?=$this->itemize($this->sheet->estimators, 'inline')?>.
+We're using our own patent-pending estimating method (based on COCOMO-II, 
+three-point estimate and function point analysis).
+According to the estimate
 project size is
-\textbf{<?=$this->sheet->lowBoundary?>--<?=$this->sheet->highBoundary?> staff-hours}. 
-This means that right now we are ready to start Inception phase, perform proper requirements
-analysis, analyze risks and re-estimate project cost. We guarantee that final project
-cost will be in the declared interval.
+\textbf{<?=$this->sheet->lowBoundary?>--<?=$this->sheet->highBoundary?>{} staff-hours}. 
+This means that right now we are ready to start Inception Phase,
+to perform proper requirements analysis, 
+to analyze risks and to re-estimate project cost.
+We guarantee that final fixed project cost will be in the promised interval.
