--- a/php/src/application/tikz/pdf-document-class.tex
+++ b/php/src/application/tikz/pdf-document-class.tex
@@ -3,8 +3,8 @@
 %% @version $Id$
 %%
 
-\documentclass[11pt, letterpaper, oneside]{article}
-\usepackage{fancyhdr}
-\usepackage[absolute]{textpos}
-\TPGrid{16}{16}
-\usepackage[top=2\TPVertModule, bottom=3\TPVertModule, left=4\TPHorizModule, right=2\TPHorizModule]{geometry}
+\documentclass[11pt,letterpaper,oneside]{article} % basic document class
+\usepackage{fancyhdr} % to be able to control header/footers and page layout
+\usepackage[absolute]{textpos} % to be able to position text boxes with absolute coordinates
+\TPGrid{16}{16} % define coordinate grid, 16x16 of the page
+\usepackage[top=2\TPVertModule,bottom=3\TPVertModule,left=4\TPHorizModule,right=2\TPHorizModule]{geometry} % layout
