--- a/php/src/application/tikz/pdf-top-header.tex
+++ b/php/src/application/tikz/pdf-top-header.tex
@@ -7,6 +7,7 @@
 \usepackage{titlesec} % to change formatting of \section{}
 \usepackage[para]{footmisc} % to change formatting of \footnote{}
 \usepackage[hyperfootnotes=true]{hyperref} % to enable \href{} command for hyper links
+\usepackage{paralist} % {inparaenum} environment to enable
 \pagestyle{empty} % don't show anything like page number, etc.
 \linespread{1.2} % interval between lines
 \DeclareMathSizes{11}{14}{10}{9} % size of MATH fonts
