--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Structure.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Structure.tex
@@ -5,7 +5,8 @@
 
 \section*{Company Structure of TechnoPark Corp.}
 
-There is \href{http://en.wikipedia.org/wiki/Matrix_management}{a strong matrix} organizational structure in TechnoPark Corp.,
+There is \href{http://en.wikipedia.org/wiki/Matrix_management}{a strong matrix}
+organizational structure in TechnoPark Corp.,
 with four major project stakeholder groups: Customer, Product Users, Project Manager
 and Suppliers. Functional departments and roles surround the project
 and give it necessary support, like quality control, resources, finances,
