--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM/ThreePoints.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM/ThreePoints.tex
@@ -1,4 +1,28 @@
 %%
 %% Copyright TechnoPark Corp., 2010
-%% @version $Id: binder.tex 664 2010-02-11 13:22:41Z yegor256@yahoo.com $
+%% @version $Id$
 %%
+
+<?=$this->estimate->estimator?> used \textbf{three-point estimate}
+method, which is a simplified variant of
+\href{http://en.wikipedia.org/wiki/Program_Evaluation_and_Review_Technique}{PERT}, 
+where each feature is estimated with three points. Best Case ($BC$) is the amount
+of staff-hours required to implement the feature, assuming everything proceeds better than is normally expected.
+Worst Case ($WC$) is a pessimistic scenario, and Most Likely ($ML$) is the most
+possible scenario. Cost is calculated with the formula:
+
+\begin{equation}
+C = \frac{BC + WC + 4 \times ML}{6} \times {<?=sprintf('%0.2f', $this->estimate->multiplier)?>}
+\end{equation}
+
+The multiplier \texttt{<?=sprintf('%0.2f', $this->estimate->multiplier)?>} indicates
+our typical assumption that we will spend
+approximately <?=round(100/$this->estimate->multiplier)?>\% of the budget for programming.
+The numbers are:
+
+\begin{equation}
+C = \frac{<?=$this->estimate->bc?> + 
+    <?=$this->estimate->wc?> + 
+    4 \times <?=$this->estimate->ml?>}{6} \times {<?=$this->estimate->multiplier?>} =
+    <?=$this->estimate->hours?>
+\end{equation}
