--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/RiskAnalysis.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/RiskAnalysis.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 \section*{Risk Analysis}
 
 After initial analysis of the project specification we identified
