--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/RiskAnalysis.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/RiskAnalysis.tex
@@ -1,3 +1,8 @@
+%%
+%% Copyright TechnoPark Corp., 2010
+%% @version $Id$
+%%
+
 In the preliminary risk analysis we identified
 <?=$this->sheet->total?> risks, 
 which, if happen, may impact project success. Risk management is what we
