improvements in sales documentation builder

--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ROM.tex
@@ -25,7 +25,7 @@ The bottom line is:
     \hline
 \end{tabular}
 
-Math average of the numbers received is <?=$this->sheet->hours?>.
+Math average of the numbers received is \textbf{<?=$this->sheet->hours?> staff-hours}.
 Rough order of magnitude estimate of project size is
 <?=$this->sheet->lowBoundary?>--<?=$this->sheet->highBoundary?>{}
 staff-hours.
